--- a/Lab0/305_Loftin_prgrm0.html
+++ b/Lab0/305_Loftin_prgrm0.html
@@ -32,9 +32,9 @@ This video is useful in helping the user change default save location<br />
 • What about your VCS?<br />
 Learning how to effective save and search projects.<br />
 • How many commits did you make while working on this project?<br />
- Used one commit. <br />
+ Used two commit. <br />
 • How would you structure your commits differently next time.<br />
- Have an extra commit just in case.
+ Finish project before commit and then make changes later.
 </h4>
 </body>
 </html>
